<resources>
    <string name="app_name">Shop Cart</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_Login">Login</string>
    <string name="title_category">Shop</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_category_fragment">Enjoy Shopping!</string>
    <string name="title_items_fragment">Products</string>
    <string name="title_details_fragment">Product Details</string>
    <string name="cart_item_price">Price: $%s</string>
    <string name="product_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>