<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.finalproject.view.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_navigation_items"
            app:destination="@id/navigation_items" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.finalproject.view.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.finalproject.view.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_items"
        android:name="com.example.finalproject.view.ItemsFragment"
        android:label="@string/title_items_fragment"
        tools:layout="@layout/fragment_items" >
        <argument
            android:name="category"
            app:argType="com.example.finalproject.model.category.Category" />
        <action
            android:id="@+id/action_navigation_items_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.finalproject.view.DetailsFragment"
        android:label="@string/title_details_fragment"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="item"
            app:argType="com.example.finalproject.model.item.Item" />
    </fragment>
</navigation>